--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.9.0,<3.11"
-pandas = "^2.1.0"
+pandas = ">=1.3.1,<2.0.0"
 numpy = "^1.25.2"
 ipykernel = "^6.25.2"
 synapseclient = "^3.0.0"
