--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = ">=3.9.0,<3.11"
 pandas = ">=1.3.1,<2.0.0"
 numpy = "^1.25.2"
 ipykernel = "^6.25.2"
-synapseclient = ">=2.7.0,<3.0.0"
+synapseclient = ">=2.7.0"
 
 
 [tool.poetry.group.test.dependencies]
